# PersonalPortfolio

./: app.py  pyproject.toml
data/: about.py  projects.py  skills.py
utils/: helpers.py
