[project]
name = "personalportfolio"
version = "0.1.0"
[tool.poetry]
name = "personalportfolio"
version = "0.1.0"
package-mode = false
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.2.3",
    "pillow>=11.2.1",
    "plotly>=6.0.1",
    "streamlit>=1.44.1",
]
